Projeto::Compilador/Compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Header Content .
Rule 2     Header -> PROGRAM identifier ( ListH ) ;
Rule 3     Header -> PROGRAM identifier ;
Rule 4     ListH -> ListH , identifier
Rule 5     ListH -> identifier
Rule 6     Content -> Declarations CompoundStatement
Rule 7     Declarations -> Declarations VariableDeclarationPart
Rule 8     Declarations -> Declarations ProcedureDeclarationPart
Rule 9     Declarations -> Declarations FunctionDeclarationPart
Rule 10    Declarations -> <empty>
Rule 11    VariableDeclarationPart -> VAR ListVarsDeclaration
Rule 12    ListVarsDeclaration -> ListVarsDeclaration ElemVarsDeclaration ;
Rule 13    ListVarsDeclaration -> ElemVarsDeclaration ;
Rule 14    ElemVarsDeclaration -> IdentifierList COLON identifier
Rule 15    ElemVarsDeclaration -> IdentifierList COLON Array
Rule 16    Array -> ARRAY [ Constant . . Constant ] OF identifier
Rule 17    IdentifierList -> IdentifierList , identifier
Rule 18    IdentifierList -> identifier
Rule 19    ProcedureDeclarationPart -> PROCEDURE identifier ListParametersDeclaration ; Content ;
Rule 20    FunctionDeclarationPart -> FUNCTION identifier ListParametersDeclaration COLON identifier ; Content ;
Rule 21    ListParametersDeclaration -> ( ListOfListParameters )
Rule 22    ListOfListParameters -> ListOfListParameters ; ListParameters
Rule 23    ListOfListParameters -> ListOfListParameters ; VAR ListParameters
Rule 24    ListOfListParameters -> ListParameters
Rule 25    ListOfListParameters -> VAR ListParameters
Rule 26    ListParametersDeclaration -> <empty>
Rule 27    ListParametersDeclaration -> ( )
Rule 28    ListParameters -> ListParameters , ElemParameter
Rule 29    ListParameters -> ElemParameter
Rule 30    ElemParameter -> IdentifierList COLON ARRAY OF identifier
Rule 31    ElemParameter -> IdentifierList COLON identifier
Rule 32    CompoundStatement -> BEGIN ListStatement END
Rule 33    ListStatement -> ListStatementAux LastStatement
Rule 34    ListStatementAux -> ListStatementAux Statement ;
Rule 35    ListStatementAux -> <empty>
Rule 36    LastStatement -> Statement
Rule 37    LastStatement -> <empty>
Rule 38    Statement -> SimpleStatement
Rule 39    Statement -> StructeredStatement
Rule 40    SimpleStatement -> AssignmentStatement
Rule 41    SimpleStatement -> ProcedureStatement
Rule 42    AssignmentStatement -> Variable ASSIGN Expression
Rule 43    ProcedureStatement -> identifier ( ListArgs )
Rule 44    ProcedureStatement -> identifier ( )
Rule 45    ProcedureStatement -> identifier
Rule 46    ListArgs -> ListArgs , Arg
Rule 47    ListArgs -> Arg
Rule 48    Arg -> Expression
Rule 49    StructeredStatement -> CompoundStatement
Rule 50    StructeredStatement -> ConditionalStatement
Rule 51    StructeredStatement -> RepetitiveStatement
Rule 52    ConditionalStatement -> IfStatement
Rule 53    IfStatement -> IF Expression THEN Statement
Rule 54    IfStatement -> IF Expression THEN Statement ELSE Statement
Rule 55    RepetitiveStatement -> WhileStatement
Rule 56    RepetitiveStatement -> ForStatement
Rule 57    WhileStatement -> WHILE Expression DO Statement
Rule 58    ForStatement -> FOR identifier ASSIGN Expression TO Expression DO Statement
Rule 59    ForStatement -> FOR identifier ASSIGN Expression DOWNTO Expression DO Statement
Rule 60    Expression -> SimpleExpression RelationalOperator Expression
Rule 61    Expression -> SimpleExpression
Rule 62    RelationalOperator -> EQUAL
Rule 63    RelationalOperator -> GREATER_THAN
Rule 64    RelationalOperator -> LESS_THAN
Rule 65    RelationalOperator -> NOT_EQUAL
Rule 66    RelationalOperator -> GREATER_THAN_EQUAL
Rule 67    RelationalOperator -> LESS_THAN_EQUAL
Rule 68    SimpleExpression -> Sign Term SecondPriorityOperator SimpleExpression
Rule 69    SimpleExpression -> Term SecondPriorityOperator SimpleExpression
Rule 70    SimpleExpression -> Term
Rule 71    SecondPriorityOperator -> +
Rule 72    SecondPriorityOperator -> -
Rule 73    SecondPriorityOperator -> OR
Rule 74    Sign -> +
Rule 75    Sign -> -
Rule 76    Term -> Factor FirstPriorityOperator Term
Rule 77    Term -> Factor
Rule 78    FirstPriorityOperator -> *
Rule 79    FirstPriorityOperator -> /
Rule 80    FirstPriorityOperator -> DIV
Rule 81    FirstPriorityOperator -> MOD
Rule 82    FirstPriorityOperator -> AND
Rule 83    Factor -> ( Expression )
Rule 84    Factor -> Variable
Rule 85    Factor -> UnsignedConstant
Rule 86    Factor -> FunctionDesignator
Rule 87    Factor -> NOT Factor
Rule 88    Factor -> TRUE
Rule 89    Factor -> FALSE
Rule 90    FunctionDesignator -> identifier ( ListArgs )
Rule 91    FunctionDesignator -> identifier ( )
Rule 92    UnsignedConstant -> UnsignedNumber
Rule 93    UnsignedConstant -> string
Rule 94    UnsignedConstant -> char
Rule 95    Constant -> num_int
Rule 96    Constant -> Sign num_int
Rule 97    Constant -> char
Rule 98    UnsignedNumber -> num_int
Rule 99    UnsignedNumber -> num_real
Rule 100   Variable -> identifier
Rule 101   Variable -> identifier [ ListExpressions ]
Rule 102   ListExpressions -> ListExpressions , Expression
Rule 103   ListExpressions -> Expression

Terminals, with rules where they appear

(                    : 2 21 27 43 44 83 90 91
)                    : 2 21 27 43 44 83 90 91
*                    : 78
+                    : 71 74
,                    : 4 17 28 46 102
-                    : 72 75
.                    : 1 16 16
/                    : 79
;                    : 2 3 12 13 19 19 20 20 22 23 34
AND                  : 82
ARRAY                : 16 30
ASSIGN               : 42 58 59
BEGIN                : 32
COLON                : 14 15 20 30 31
DIV                  : 80
DO                   : 57 58 59
DOWNTO               : 59
ELSE                 : 54
END                  : 32
EQUAL                : 62
FALSE                : 89
FOR                  : 58 59
FUNCTION             : 20
GREATER_THAN         : 63
GREATER_THAN_EQUAL   : 66
IF                   : 53 54
LESS_THAN            : 64
LESS_THAN_EQUAL      : 67
MOD                  : 81
NOT                  : 87
NOT_EQUAL            : 65
OF                   : 16 30
OR                   : 73
PROCEDURE            : 19
PROGRAM              : 2 3
THEN                 : 53 54
TO                   : 58
TRUE                 : 88
VAR                  : 11 23 25
WHILE                : 57
[                    : 16 101
]                    : 16 101
char                 : 94 97
error                : 
identifier           : 2 3 4 5 14 16 17 18 19 20 20 30 31 43 44 45 58 59 90 91 100 101
num_int              : 95 96 98
num_real             : 99
string               : 93

Nonterminals, with rules where they appear

Arg                  : 46 47
Array                : 15
AssignmentStatement  : 40
CompoundStatement    : 6 49
ConditionalStatement : 50
Constant             : 16 16
Content              : 1 19 20
Declarations         : 6 7 8 9
ElemParameter        : 28 29
ElemVarsDeclaration  : 12 13
Expression           : 42 48 53 54 57 58 58 59 59 60 83 102 103
Factor               : 76 77 87
FirstPriorityOperator : 76
ForStatement         : 56
FunctionDeclarationPart : 9
FunctionDesignator   : 86
Header               : 1
IdentifierList       : 14 15 17 30 31
IfStatement          : 52
LastStatement        : 33
ListArgs             : 43 46 90
ListExpressions      : 101 102
ListH                : 2 4
ListOfListParameters : 21 22 23
ListParameters       : 22 23 24 25 28
ListParametersDeclaration : 19 20
ListStatement        : 32
ListStatementAux     : 33 34
ListVarsDeclaration  : 11 12
ProcedureDeclarationPart : 8
ProcedureStatement   : 41
Program              : 0
RelationalOperator   : 60
RepetitiveStatement  : 51
SecondPriorityOperator : 68 69
Sign                 : 68 96
SimpleExpression     : 60 61 68 69
SimpleStatement      : 38
Statement            : 34 36 53 54 54 57 58 59
StructeredStatement  : 39
Term                 : 68 69 70 76
UnsignedConstant     : 85
UnsignedNumber       : 92
Variable             : 42 84
VariableDeclarationPart : 7
WhileStatement       : 55

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Header Content .
    (2) Header -> . PROGRAM identifier ( ListH ) ;
    (3) Header -> . PROGRAM identifier ;

    PROGRAM         shift and go to state 3

    Program                        shift and go to state 1
    Header                         shift and go to state 2

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Header . Content .
    (6) Content -> . Declarations CompoundStatement
    (7) Declarations -> . Declarations VariableDeclarationPart
    (8) Declarations -> . Declarations ProcedureDeclarationPart
    (9) Declarations -> . Declarations FunctionDeclarationPart
    (10) Declarations -> .

    BEGIN           reduce using rule 10 (Declarations -> .)
    VAR             reduce using rule 10 (Declarations -> .)
    PROCEDURE       reduce using rule 10 (Declarations -> .)
    FUNCTION        reduce using rule 10 (Declarations -> .)

    Content                        shift and go to state 4
    Declarations                   shift and go to state 5

state 3

    (2) Header -> PROGRAM . identifier ( ListH ) ;
    (3) Header -> PROGRAM . identifier ;

    identifier      shift and go to state 6


state 4

    (1) Program -> Header Content . .

    .               shift and go to state 7


state 5

    (6) Content -> Declarations . CompoundStatement
    (7) Declarations -> Declarations . VariableDeclarationPart
    (8) Declarations -> Declarations . ProcedureDeclarationPart
    (9) Declarations -> Declarations . FunctionDeclarationPart
    (32) CompoundStatement -> . BEGIN ListStatement END
    (11) VariableDeclarationPart -> . VAR ListVarsDeclaration
    (19) ProcedureDeclarationPart -> . PROCEDURE identifier ListParametersDeclaration ; Content ;
    (20) FunctionDeclarationPart -> . FUNCTION identifier ListParametersDeclaration COLON identifier ; Content ;

    BEGIN           shift and go to state 12
    VAR             shift and go to state 13
    PROCEDURE       shift and go to state 14
    FUNCTION        shift and go to state 15

    CompoundStatement              shift and go to state 8
    VariableDeclarationPart        shift and go to state 9
    ProcedureDeclarationPart       shift and go to state 10
    FunctionDeclarationPart        shift and go to state 11

state 6

    (2) Header -> PROGRAM identifier . ( ListH ) ;
    (3) Header -> PROGRAM identifier . ;

    (               shift and go to state 16
    ;               shift and go to state 17


state 7

    (1) Program -> Header Content . .

    $end            reduce using rule 1 (Program -> Header Content . .)


state 8

    (6) Content -> Declarations CompoundStatement .

    .               reduce using rule 6 (Content -> Declarations CompoundStatement .)
    ;               reduce using rule 6 (Content -> Declarations CompoundStatement .)


state 9

    (7) Declarations -> Declarations VariableDeclarationPart .

    BEGIN           reduce using rule 7 (Declarations -> Declarations VariableDeclarationPart .)
    VAR             reduce using rule 7 (Declarations -> Declarations VariableDeclarationPart .)
    PROCEDURE       reduce using rule 7 (Declarations -> Declarations VariableDeclarationPart .)
    FUNCTION        reduce using rule 7 (Declarations -> Declarations VariableDeclarationPart .)


state 10

    (8) Declarations -> Declarations ProcedureDeclarationPart .

    BEGIN           reduce using rule 8 (Declarations -> Declarations ProcedureDeclarationPart .)
    VAR             reduce using rule 8 (Declarations -> Declarations ProcedureDeclarationPart .)
    PROCEDURE       reduce using rule 8 (Declarations -> Declarations ProcedureDeclarationPart .)
    FUNCTION        reduce using rule 8 (Declarations -> Declarations ProcedureDeclarationPart .)


state 11

    (9) Declarations -> Declarations FunctionDeclarationPart .

    BEGIN           reduce using rule 9 (Declarations -> Declarations FunctionDeclarationPart .)
    VAR             reduce using rule 9 (Declarations -> Declarations FunctionDeclarationPart .)
    PROCEDURE       reduce using rule 9 (Declarations -> Declarations FunctionDeclarationPart .)
    FUNCTION        reduce using rule 9 (Declarations -> Declarations FunctionDeclarationPart .)


state 12

    (32) CompoundStatement -> BEGIN . ListStatement END
    (33) ListStatement -> . ListStatementAux LastStatement
    (34) ListStatementAux -> . ListStatementAux Statement ;
    (35) ListStatementAux -> .

    identifier      reduce using rule 35 (ListStatementAux -> .)
    BEGIN           reduce using rule 35 (ListStatementAux -> .)
    IF              reduce using rule 35 (ListStatementAux -> .)
    WHILE           reduce using rule 35 (ListStatementAux -> .)
    FOR             reduce using rule 35 (ListStatementAux -> .)
    END             reduce using rule 35 (ListStatementAux -> .)

    ListStatement                  shift and go to state 18
    ListStatementAux               shift and go to state 19

state 13

    (11) VariableDeclarationPart -> VAR . ListVarsDeclaration
    (12) ListVarsDeclaration -> . ListVarsDeclaration ElemVarsDeclaration ;
    (13) ListVarsDeclaration -> . ElemVarsDeclaration ;
    (14) ElemVarsDeclaration -> . IdentifierList COLON identifier
    (15) ElemVarsDeclaration -> . IdentifierList COLON Array
    (17) IdentifierList -> . IdentifierList , identifier
    (18) IdentifierList -> . identifier

    identifier      shift and go to state 23

    ListVarsDeclaration            shift and go to state 20
    ElemVarsDeclaration            shift and go to state 21
    IdentifierList                 shift and go to state 22

state 14

    (19) ProcedureDeclarationPart -> PROCEDURE . identifier ListParametersDeclaration ; Content ;

    identifier      shift and go to state 24


state 15

    (20) FunctionDeclarationPart -> FUNCTION . identifier ListParametersDeclaration COLON identifier ; Content ;

    identifier      shift and go to state 25


state 16

    (2) Header -> PROGRAM identifier ( . ListH ) ;
    (4) ListH -> . ListH , identifier
    (5) ListH -> . identifier

    identifier      shift and go to state 26

    ListH                          shift and go to state 27

state 17

    (3) Header -> PROGRAM identifier ; .

    BEGIN           reduce using rule 3 (Header -> PROGRAM identifier ; .)
    VAR             reduce using rule 3 (Header -> PROGRAM identifier ; .)
    PROCEDURE       reduce using rule 3 (Header -> PROGRAM identifier ; .)
    FUNCTION        reduce using rule 3 (Header -> PROGRAM identifier ; .)


state 18

    (32) CompoundStatement -> BEGIN ListStatement . END

    END             shift and go to state 28


state 19

    (33) ListStatement -> ListStatementAux . LastStatement
    (34) ListStatementAux -> ListStatementAux . Statement ;
    (36) LastStatement -> . Statement
    (37) LastStatement -> .
    (38) Statement -> . SimpleStatement
    (39) Statement -> . StructeredStatement
    (40) SimpleStatement -> . AssignmentStatement
    (41) SimpleStatement -> . ProcedureStatement
    (49) StructeredStatement -> . CompoundStatement
    (50) StructeredStatement -> . ConditionalStatement
    (51) StructeredStatement -> . RepetitiveStatement
    (42) AssignmentStatement -> . Variable ASSIGN Expression
    (43) ProcedureStatement -> . identifier ( ListArgs )
    (44) ProcedureStatement -> . identifier ( )
    (45) ProcedureStatement -> . identifier
    (32) CompoundStatement -> . BEGIN ListStatement END
    (52) ConditionalStatement -> . IfStatement
    (55) RepetitiveStatement -> . WhileStatement
    (56) RepetitiveStatement -> . ForStatement
    (100) Variable -> . identifier
    (101) Variable -> . identifier [ ListExpressions ]
    (53) IfStatement -> . IF Expression THEN Statement
    (54) IfStatement -> . IF Expression THEN Statement ELSE Statement
    (57) WhileStatement -> . WHILE Expression DO Statement
    (58) ForStatement -> . FOR identifier ASSIGN Expression TO Expression DO Statement
    (59) ForStatement -> . FOR identifier ASSIGN Expression DOWNTO Expression DO Statement

    END             reduce using rule 37 (LastStatement -> .)
    identifier      shift and go to state 39
    BEGIN           shift and go to state 12
    IF              shift and go to state 43
    WHILE           shift and go to state 44
    FOR             shift and go to state 45

    LastStatement                  shift and go to state 29
    Statement                      shift and go to state 30
    SimpleStatement                shift and go to state 31
    StructeredStatement            shift and go to state 32
    AssignmentStatement            shift and go to state 33
    ProcedureStatement             shift and go to state 34
    CompoundStatement              shift and go to state 35
    ConditionalStatement           shift and go to state 36
    RepetitiveStatement            shift and go to state 37
    Variable                       shift and go to state 38
    IfStatement                    shift and go to state 40
    WhileStatement                 shift and go to state 41
    ForStatement                   shift and go to state 42

state 20

    (11) VariableDeclarationPart -> VAR ListVarsDeclaration .
    (12) ListVarsDeclaration -> ListVarsDeclaration . ElemVarsDeclaration ;
    (14) ElemVarsDeclaration -> . IdentifierList COLON identifier
    (15) ElemVarsDeclaration -> . IdentifierList COLON Array
    (17) IdentifierList -> . IdentifierList , identifier
    (18) IdentifierList -> . identifier

    BEGIN           reduce using rule 11 (VariableDeclarationPart -> VAR ListVarsDeclaration .)
    VAR             reduce using rule 11 (VariableDeclarationPart -> VAR ListVarsDeclaration .)
    PROCEDURE       reduce using rule 11 (VariableDeclarationPart -> VAR ListVarsDeclaration .)
    FUNCTION        reduce using rule 11 (VariableDeclarationPart -> VAR ListVarsDeclaration .)
    identifier      shift and go to state 23

    ElemVarsDeclaration            shift and go to state 46
    IdentifierList                 shift and go to state 22

state 21

    (13) ListVarsDeclaration -> ElemVarsDeclaration . ;

    ;               shift and go to state 47


state 22

    (14) ElemVarsDeclaration -> IdentifierList . COLON identifier
    (15) ElemVarsDeclaration -> IdentifierList . COLON Array
    (17) IdentifierList -> IdentifierList . , identifier

    COLON           shift and go to state 48
    ,               shift and go to state 49


state 23

    (18) IdentifierList -> identifier .

    COLON           reduce using rule 18 (IdentifierList -> identifier .)
    ,               reduce using rule 18 (IdentifierList -> identifier .)


state 24

    (19) ProcedureDeclarationPart -> PROCEDURE identifier . ListParametersDeclaration ; Content ;
    (21) ListParametersDeclaration -> . ( ListOfListParameters )
    (26) ListParametersDeclaration -> .
    (27) ListParametersDeclaration -> . ( )

    (               shift and go to state 51
    ;               reduce using rule 26 (ListParametersDeclaration -> .)

    ListParametersDeclaration      shift and go to state 50

state 25

    (20) FunctionDeclarationPart -> FUNCTION identifier . ListParametersDeclaration COLON identifier ; Content ;
    (21) ListParametersDeclaration -> . ( ListOfListParameters )
    (26) ListParametersDeclaration -> .
    (27) ListParametersDeclaration -> . ( )

    (               shift and go to state 51
    COLON           reduce using rule 26 (ListParametersDeclaration -> .)

    ListParametersDeclaration      shift and go to state 52

state 26

    (5) ListH -> identifier .

    )               reduce using rule 5 (ListH -> identifier .)
    ,               reduce using rule 5 (ListH -> identifier .)


state 27

    (2) Header -> PROGRAM identifier ( ListH . ) ;
    (4) ListH -> ListH . , identifier

    )               shift and go to state 53
    ,               shift and go to state 54


state 28

    (32) CompoundStatement -> BEGIN ListStatement END .

    .               reduce using rule 32 (CompoundStatement -> BEGIN ListStatement END .)
    ;               reduce using rule 32 (CompoundStatement -> BEGIN ListStatement END .)
    END             reduce using rule 32 (CompoundStatement -> BEGIN ListStatement END .)
    ELSE            reduce using rule 32 (CompoundStatement -> BEGIN ListStatement END .)


state 29

    (33) ListStatement -> ListStatementAux LastStatement .

    END             reduce using rule 33 (ListStatement -> ListStatementAux LastStatement .)


state 30

    (34) ListStatementAux -> ListStatementAux Statement . ;
    (36) LastStatement -> Statement .

    ;               shift and go to state 55
    END             reduce using rule 36 (LastStatement -> Statement .)


state 31

    (38) Statement -> SimpleStatement .

    ;               reduce using rule 38 (Statement -> SimpleStatement .)
    END             reduce using rule 38 (Statement -> SimpleStatement .)
    ELSE            reduce using rule 38 (Statement -> SimpleStatement .)


state 32

    (39) Statement -> StructeredStatement .

    ;               reduce using rule 39 (Statement -> StructeredStatement .)
    END             reduce using rule 39 (Statement -> StructeredStatement .)
    ELSE            reduce using rule 39 (Statement -> StructeredStatement .)


state 33

    (40) SimpleStatement -> AssignmentStatement .

    ;               reduce using rule 40 (SimpleStatement -> AssignmentStatement .)
    END             reduce using rule 40 (SimpleStatement -> AssignmentStatement .)
    ELSE            reduce using rule 40 (SimpleStatement -> AssignmentStatement .)


state 34

    (41) SimpleStatement -> ProcedureStatement .

    ;               reduce using rule 41 (SimpleStatement -> ProcedureStatement .)
    END             reduce using rule 41 (SimpleStatement -> ProcedureStatement .)
    ELSE            reduce using rule 41 (SimpleStatement -> ProcedureStatement .)


state 35

    (49) StructeredStatement -> CompoundStatement .

    ;               reduce using rule 49 (StructeredStatement -> CompoundStatement .)
    END             reduce using rule 49 (StructeredStatement -> CompoundStatement .)
    ELSE            reduce using rule 49 (StructeredStatement -> CompoundStatement .)


state 36

    (50) StructeredStatement -> ConditionalStatement .

    ;               reduce using rule 50 (StructeredStatement -> ConditionalStatement .)
    END             reduce using rule 50 (StructeredStatement -> ConditionalStatement .)
    ELSE            reduce using rule 50 (StructeredStatement -> ConditionalStatement .)


state 37

    (51) StructeredStatement -> RepetitiveStatement .

    ;               reduce using rule 51 (StructeredStatement -> RepetitiveStatement .)
    END             reduce using rule 51 (StructeredStatement -> RepetitiveStatement .)
    ELSE            reduce using rule 51 (StructeredStatement -> RepetitiveStatement .)


state 38

    (42) AssignmentStatement -> Variable . ASSIGN Expression

    ASSIGN          shift and go to state 56


state 39

    (43) ProcedureStatement -> identifier . ( ListArgs )
    (44) ProcedureStatement -> identifier . ( )
    (45) ProcedureStatement -> identifier .
    (100) Variable -> identifier .
    (101) Variable -> identifier . [ ListExpressions ]

    (               shift and go to state 57
    ;               reduce using rule 45 (ProcedureStatement -> identifier .)
    END             reduce using rule 45 (ProcedureStatement -> identifier .)
    ELSE            reduce using rule 45 (ProcedureStatement -> identifier .)
    ASSIGN          reduce using rule 100 (Variable -> identifier .)
    [               shift and go to state 58


state 40

    (52) ConditionalStatement -> IfStatement .

    ;               reduce using rule 52 (ConditionalStatement -> IfStatement .)
    END             reduce using rule 52 (ConditionalStatement -> IfStatement .)
    ELSE            reduce using rule 52 (ConditionalStatement -> IfStatement .)


state 41

    (55) RepetitiveStatement -> WhileStatement .

    ;               reduce using rule 55 (RepetitiveStatement -> WhileStatement .)
    END             reduce using rule 55 (RepetitiveStatement -> WhileStatement .)
    ELSE            reduce using rule 55 (RepetitiveStatement -> WhileStatement .)


state 42

    (56) RepetitiveStatement -> ForStatement .

    ;               reduce using rule 56 (RepetitiveStatement -> ForStatement .)
    END             reduce using rule 56 (RepetitiveStatement -> ForStatement .)
    ELSE            reduce using rule 56 (RepetitiveStatement -> ForStatement .)


state 43

    (53) IfStatement -> IF . Expression THEN Statement
    (54) IfStatement -> IF . Expression THEN Statement ELSE Statement
    (60) Expression -> . SimpleExpression RelationalOperator Expression
    (61) Expression -> . SimpleExpression
    (68) SimpleExpression -> . Sign Term SecondPriorityOperator SimpleExpression
    (69) SimpleExpression -> . Term SecondPriorityOperator SimpleExpression
    (70) SimpleExpression -> . Term
    (74) Sign -> . +
    (75) Sign -> . -
    (76) Term -> . Factor FirstPriorityOperator Term
    (77) Term -> . Factor
    (83) Factor -> . ( Expression )
    (84) Factor -> . Variable
    (85) Factor -> . UnsignedConstant
    (86) Factor -> . FunctionDesignator
    (87) Factor -> . NOT Factor
    (88) Factor -> . TRUE
    (89) Factor -> . FALSE
    (100) Variable -> . identifier
    (101) Variable -> . identifier [ ListExpressions ]
    (92) UnsignedConstant -> . UnsignedNumber
    (93) UnsignedConstant -> . string
    (94) UnsignedConstant -> . char
    (90) FunctionDesignator -> . identifier ( ListArgs )
    (91) FunctionDesignator -> . identifier ( )
    (98) UnsignedNumber -> . num_int
    (99) UnsignedNumber -> . num_real

    +               shift and go to state 63
    -               shift and go to state 64
    (               shift and go to state 66
    NOT             shift and go to state 70
    TRUE            shift and go to state 71
    FALSE           shift and go to state 72
    identifier      shift and go to state 73
    string          shift and go to state 75
    char            shift and go to state 76
    num_int         shift and go to state 77
    num_real        shift and go to state 78

    Expression                     shift and go to state 59
    SimpleExpression               shift and go to state 60
    Sign                           shift and go to state 61
    Term                           shift and go to state 62
    Factor                         shift and go to state 65
    Variable                       shift and go to state 67
    UnsignedConstant               shift and go to state 68
    FunctionDesignator             shift and go to state 69
    UnsignedNumber                 shift and go to state 74

state 44

    (57) WhileStatement -> WHILE . Expression DO Statement
    (60) Expression -> . SimpleExpression RelationalOperator Expression
    (61) Expression -> . SimpleExpression
    (68) SimpleExpression -> . Sign Term SecondPriorityOperator SimpleExpression
    (69) SimpleExpression -> . Term SecondPriorityOperator SimpleExpression
    (70) SimpleExpression -> . Term
    (74) Sign -> . +
    (75) Sign -> . -
    (76) Term -> . Factor FirstPriorityOperator Term
    (77) Term -> . Factor
    (83) Factor -> . ( Expression )
    (84) Factor -> . Variable
    (85) Factor -> . UnsignedConstant
    (86) Factor -> . FunctionDesignator
    (87) Factor -> . NOT Factor
    (88) Factor -> . TRUE
    (89) Factor -> . FALSE
    (100) Variable -> . identifier
    (101) Variable -> . identifier [ ListExpressions ]
    (92) UnsignedConstant -> . UnsignedNumber
    (93) UnsignedConstant -> . string
    (94) UnsignedConstant -> . char
    (90) FunctionDesignator -> . identifier ( ListArgs )
    (91) FunctionDesignator -> . identifier ( )
    (98) UnsignedNumber -> . num_int
    (99) UnsignedNumber -> . num_real

    +               shift and go to state 63
    -               shift and go to state 64
    (               shift and go to state 66
    NOT             shift and go to state 70
    TRUE            shift and go to state 71
    FALSE           shift and go to state 72
    identifier      shift and go to state 73
    string          shift and go to state 75
    char            shift and go to state 76
    num_int         shift and go to state 77
    num_real        shift and go to state 78

    Expression                     shift and go to state 79
    SimpleExpression               shift and go to state 60
    Sign                           shift and go to state 61
    Term                           shift and go to state 62
    Factor                         shift and go to state 65
    Variable                       shift and go to state 67
    UnsignedConstant               shift and go to state 68
    FunctionDesignator             shift and go to state 69
    UnsignedNumber                 shift and go to state 74

state 45

    (58) ForStatement -> FOR . identifier ASSIGN Expression TO Expression DO Statement
    (59) ForStatement -> FOR . identifier ASSIGN Expression DOWNTO Expression DO Statement

    identifier      shift and go to state 80


state 46

    (12) ListVarsDeclaration -> ListVarsDeclaration ElemVarsDeclaration . ;

    ;               shift and go to state 81


state 47

    (13) ListVarsDeclaration -> ElemVarsDeclaration ; .

    identifier      reduce using rule 13 (ListVarsDeclaration -> ElemVarsDeclaration ; .)
    BEGIN           reduce using rule 13 (ListVarsDeclaration -> ElemVarsDeclaration ; .)
    VAR             reduce using rule 13 (ListVarsDeclaration -> ElemVarsDeclaration ; .)
    PROCEDURE       reduce using rule 13 (ListVarsDeclaration -> ElemVarsDeclaration ; .)
    FUNCTION        reduce using rule 13 (ListVarsDeclaration -> ElemVarsDeclaration ; .)


state 48

    (14) ElemVarsDeclaration -> IdentifierList COLON . identifier
    (15) ElemVarsDeclaration -> IdentifierList COLON . Array
    (16) Array -> . ARRAY [ Constant . . Constant ] OF identifier

    identifier      shift and go to state 82
    ARRAY           shift and go to state 84

    Array                          shift and go to state 83

state 49

    (17) IdentifierList -> IdentifierList , . identifier

    identifier      shift and go to state 85


state 50

    (19) ProcedureDeclarationPart -> PROCEDURE identifier ListParametersDeclaration . ; Content ;

    ;               shift and go to state 86


state 51

    (21) ListParametersDeclaration -> ( . ListOfListParameters )
    (27) ListParametersDeclaration -> ( . )
    (22) ListOfListParameters -> . ListOfListParameters ; ListParameters
    (23) ListOfListParameters -> . ListOfListParameters ; VAR ListParameters
    (24) ListOfListParameters -> . ListParameters
    (25) ListOfListParameters -> . VAR ListParameters
    (28) ListParameters -> . ListParameters , ElemParameter
    (29) ListParameters -> . ElemParameter
    (30) ElemParameter -> . IdentifierList COLON ARRAY OF identifier
    (31) ElemParameter -> . IdentifierList COLON identifier
    (17) IdentifierList -> . IdentifierList , identifier
    (18) IdentifierList -> . identifier

    )               shift and go to state 88
    VAR             shift and go to state 90
    identifier      shift and go to state 23

    ListOfListParameters           shift and go to state 87
    ListParameters                 shift and go to state 89
    ElemParameter                  shift and go to state 91
    IdentifierList                 shift and go to state 92

state 52

    (20) FunctionDeclarationPart -> FUNCTION identifier ListParametersDeclaration . COLON identifier ; Content ;

    COLON           shift and go to state 93


state 53

    (2) Header -> PROGRAM identifier ( ListH ) . ;

    ;               shift and go to state 94


state 54

    (4) ListH -> ListH , . identifier

    identifier      shift and go to state 95


state 55

    (34) ListStatementAux -> ListStatementAux Statement ; .

    identifier      reduce using rule 34 (ListStatementAux -> ListStatementAux Statement ; .)
    BEGIN           reduce using rule 34 (ListStatementAux -> ListStatementAux Statement ; .)
    IF              reduce using rule 34 (ListStatementAux -> ListStatementAux Statement ; .)
    WHILE           reduce using rule 34 (ListStatementAux -> ListStatementAux Statement ; .)
    FOR             reduce using rule 34 (ListStatementAux -> ListStatementAux Statement ; .)
    END             reduce using rule 34 (ListStatementAux -> ListStatementAux Statement ; .)


state 56

    (42) AssignmentStatement -> Variable ASSIGN . Expression
    (60) Expression -> . SimpleExpression RelationalOperator Expression
    (61) Expression -> . SimpleExpression
    (68) SimpleExpression -> . Sign Term SecondPriorityOperator SimpleExpression
    (69) SimpleExpression -> . Term SecondPriorityOperator SimpleExpression
    (70) SimpleExpression -> . Term
    (74) Sign -> . +
    (75) Sign -> . -
    (76) Term -> . Factor FirstPriorityOperator Term
    (77) Term -> . Factor
    (83) Factor -> . ( Expression )
    (84) Factor -> . Variable
    (85) Factor -> . UnsignedConstant
    (86) Factor -> . FunctionDesignator
    (87) Factor -> . NOT Factor
    (88) Factor -> . TRUE
    (89) Factor -> . FALSE
    (100) Variable -> . identifier
    (101) Variable -> . identifier [ ListExpressions ]
    (92) UnsignedConstant -> . UnsignedNumber
    (93) UnsignedConstant -> . string
    (94) UnsignedConstant -> . char
    (90) FunctionDesignator -> . identifier ( ListArgs )
    (91) FunctionDesignator -> . identifier ( )
    (98) UnsignedNumber -> . num_int
    (99) UnsignedNumber -> . num_real

    +               shift and go to state 63
    -               shift and go to state 64
    (               shift and go to state 66
    NOT             shift and go to state 70
    TRUE            shift and go to state 71
    FALSE           shift and go to state 72
    identifier      shift and go to state 73
    string          shift and go to state 75
    char            shift and go to state 76
    num_int         shift and go to state 77
    num_real        shift and go to state 78

    Variable                       shift and go to state 67
    Expression                     shift and go to state 96
    SimpleExpression               shift and go to state 60
    Sign                           shift and go to state 61
    Term                           shift and go to state 62
    Factor                         shift and go to state 65
    UnsignedConstant               shift and go to state 68
    FunctionDesignator             shift and go to state 69
    UnsignedNumber                 shift and go to state 74

state 57
